[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Scenes Scripts/Party.gd" type="Script" id=1]
[ext_resource path="res://Objects/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Objects Scripts/Main_camera.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Objects Scripts/Minimap.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Objects Scripts/Action_bar.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Setting Scripts/Setting_P.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Setting Scripts/Console.gd" type="Script" id=7]

[node name="Party" type="Node"]
script = ExtResource( 1 )

[node name="Main_camera" type="Camera2D" parent="."]
current = true
script = ExtResource( 3 )
camera_speed = 650.0
camera_friction = 1.2

[node name="Map" parent="." instance=ExtResource( 2 )]

[node name="Players" type="Node" parent="."]

[node name="Canvas_layer_5" type="CanvasLayer" parent="."]
layer = 5
__meta__ = {
"_editor_description_": "Canvas layer used  UI elements in this scene"
}

[node name="Console" type="Control" parent="Canvas_layer_5"]
margin_top = 788.0
margin_right = 284.0
margin_bottom = 1080.0
script = ExtResource( 7 )

[node name="Console_Input" type="LineEdit" parent="Canvas_layer_5/Console"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -26.0
margin_right = 284.0
margin_bottom = -2.0
max_length = 70
placeholder_text = "Use \"/\" for command"

[node name="ScrollContainer" type="ScrollContainer" parent="Canvas_layer_5/Console"]
margin_right = 284.0
margin_bottom = 268.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas_layer_5/Console/ScrollContainer"]
margin_right = 284.0
margin_bottom = 14.0
alignment = 2

[node name="Label" type="Label" parent="Canvas_layer_5/Console/ScrollContainer/VBoxContainer"]
margin_right = 284.0
margin_bottom = 14.0
text = "                                                                       "

[node name="Minimap" type="Control" parent="Canvas_layer_5"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -430.0
margin_top = -294.0
script = ExtResource( 4 )

[node name="ViewportContainer" type="ViewportContainer" parent="Canvas_layer_5/Minimap"]
margin_right = 431.0
margin_bottom = 295.0
stretch = true

[node name="Viewport" type="Viewport" parent="Canvas_layer_5/Minimap/ViewportContainer"]
size = Vector2( 1920, 1080 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Label" type="Label" parent="Canvas_layer_5/Minimap"]
margin_left = 189.0
margin_top = 125.0
margin_right = 245.0
margin_bottom = 139.0
text = "Minimap"

[node name="Action_bar" type="Control" parent="Canvas_layer_5"]
anchor_left = 0.129
anchor_top = 0.803
anchor_right = 0.777
anchor_bottom = 1.0
margin_left = 0.319977
margin_top = -0.240051
margin_right = -0.839966
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="Canvas_layer_5/Action_bar"]
anchor_left = 0.029
anchor_top = -0.38
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.0470009
margin_top = -0.0599976
color = Color( 0.403922, 0.403922, 0.403922, 1 )

[node name="Label" type="Label" parent="Canvas_layer_5/Action_bar"]
margin_left = 410.0
margin_top = 98.0
margin_right = 482.0
margin_bottom = 112.0
text = "Actions bar"

[node name="Canvas_layer_100" type="CanvasLayer" parent="."]
layer = 100
__meta__ = {
"_editor_description_": "Canvas layer used for the setting menu (pls stay like this for all the scenes)"
}

[node name="Setting_menu" type="Control" parent="Canvas_layer_100"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
margin_bottom = 1.0
script = ExtResource( 6 )

[node name="Back_blurr" type="ColorRect" parent="Canvas_layer_100/Setting_menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.12549 )

[node name="Quit_button" type="Button" parent="Canvas_layer_100/Setting_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = 214.0
margin_right = 41.0
margin_bottom = 234.0
text = "Quit Game"

[node name="Return_button" type="Button" parent="Canvas_layer_100/Setting_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = 90.0
margin_right = 55.0
margin_bottom = 110.0
text = "Return to game"

[node name="Label" type="Label" parent="Canvas_layer_100/Setting_menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -25.5
margin_top = 49.0
margin_right = 25.5
margin_bottom = 63.0
text = "Settings"

[connection signal="console_log" from="Map" to="Canvas_layer_5/Console" method="console_log"]
[connection signal="pressed" from="Canvas_layer_100/Setting_menu/Quit_button" to="Canvas_layer_100/Setting_menu" method="_on_Quit_button_pressed"]
[connection signal="pressed" from="Canvas_layer_100/Setting_menu/Return_button" to="Canvas_layer_100/Setting_menu" method="_on_Return_button_pressed"]
